# ELTE-adv-info-2-2022

./: .gitignore  README.md
homework-1/: Makefile
homework-1/include/: matrix.h  operations.h  secure_io.h  str.h  vector.h
homework-1/src/: main.c
homework-2/: Makefile
homework-2/analysis/: analysis.py
homework-2/include/: func.h  secure_io.h
homework-2/python/: Untitled.ipynb
homework-2/src/: main.c
homework-3/: CMakeLists.txt  Makefile
homework-3/compp/: CMakeLists.txt  odeint.cpp  odeint.hpp  vector.cpp  vector.hpp
homework-3/include/: odeint.hpp  vector.hpp
homework-3/python/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
homework-3/src/: main.c  main.cpp  odeint.cpp  vector.cpp
project/: CMakeLists.txt
project/include/: field.hpp  pdeint.hpp
project/notebook/: Untitled.ipynb
project/src/: burgers1d.cpp  burgers2d.cpp  main.cpp
test/: Makefile
test/include/: func.h
test/src/: main.c
